<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondoActivitys"
    tools:context=".Principal"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/TITLE_APP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="Titulo de la aplicacion"
        android:fontFamily="@font/typey"
        android:gravity="center_vertical"
        android:text="@string/PopShow"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        app:autoSizeMaxTextSize="100dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/LOGO"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="Logotipo de la aplicacion"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.459"
        app:srcCompat="@mipmap/icon_app_2" />

    <TextView
        android:id="@+id/ESTRIBILLO"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="Frase llamativa"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/DescubreP"
        app:autoSizeMaxTextSize="60dp"
        app:autoSizeTextType="uniform"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/guideline12"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <TextView
        android:id="@+id/legend_sitios_turisticos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="indicador"
        android:gravity="left|center_vertical"
        android:text="@string/SitiosPop"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:autoSizeMaxTextSize="50dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:layout_constraintVertical_bias="0.501" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="indicador"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:layout_constraintVertical_bias="0.488"
        app:srcCompat="@drawable/ic_map_marker_radius_black_36dp" />

    <ScrollView
        android:id="@+id/contenedor_botones_sitios"
        android:layout_width="336dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline20"
        app:layout_constraintVertical_bias="0.539">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/ButtonCaldas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBotonesOpciones"
                android:contentDescription="boton que dirige a la activity del parque caldas"
                android:drawableLeft="@drawable/ic_brain_white_36dp"
                android:text="@string/ButtonCaldas"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/ButtonMuseo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBotonesOpciones"
                android:contentDescription="boton que dirige a la activity del museo"
                android:drawableLeft="@drawable/ic_bank_white_36dp"
                android:text="@string/ButtonMuseo"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/ButtonErmita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBotonesOpciones"
                android:contentDescription="boton que dirige a la activity de la ermita"
                android:drawableLeft="@drawable/ic_church_white_36dp"
                android:text="@string/ButtonErmita"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/ButtonMorro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBotonesOpciones"
                android:contentDescription="boton que dirige a la activity del morro"
                android:drawableLeft="@drawable/ic_image_filter_hdr_white_36dp"
                android:text="@string/ButtonMorro"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/ButtonCampanario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBotonesOpciones"
                android:contentDescription="boton que dirige a la activity de campanario"
                android:drawableLeft="@drawable/ic_store_white_36dp"
                android:text="@string/ButtonCampanario"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/ButtonPueblito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBotonesOpciones"
                android:contentDescription="boton que dirige a la activity del pueblito"
                android:drawableLeft="@drawable/ic_city_variant_outline_white_36dp"
                android:text="@string/ButtonPueblito"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/infNavig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/supNavig">

        <Button
            android:id="@+id/ButtonFavoritos"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="Boton favs"
            android:drawableLeft="@drawable/ic_heart_white_24dp"
            android:text="@string/title_activity_favoritos"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            app:autoSizeMaxTextSize="13sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ButtonHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="Boton home"
            android:drawableLeft="@drawable/ic_home_white_24dp"
            android:text="@string/principal"
            android:textColor="@android:color/white"
            app:autoSizeMaxTextSize="13sp"
            app:autoSizeTextType="uniform"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ButtonQr"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="Boton para QR"
            android:drawableLeft="@drawable/ic_qrcode_scan_white_24dp"
            android:text="@string/QR"
            android:textColor="@android:color/white"
            app:autoSizeMaxTextSize="13sp"
            app:autoSizeTextType="uniform"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.124430954" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2003035" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16301703" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.649635" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.64" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8759124" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30656934" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26251897" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1216545" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.19951338" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.305" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35508347" />

    <android.support.constraint.Guideline
        android:id="@+id/supNavig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/infNavig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40364188" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83915025" />

</android.support.constraint.ConstraintLayout>